@@ -363,6 +363,9 @@
 /* Define if your PowerPC64 linker only needs function descriptor syms. */
 #undef HAVE_LD_NO_DOT_SYMS
 
+/* Define if your PowerPC64 linker handles overlapping .opd entries. */
+#undef HAVE_LD_OVERLAPPING_OPD
+
 /* Define if your linker supports -pie option. */
 #undef HAVE_LD_PIE
 
